--- a/jive-chatbot-widget/package.json
+++ b/jive-chatbot-widget/package.json
@@ -20,6 +20,9 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "socket.io-client": "^4.7.4"
+  },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-node-resolve": "^16.0.1",
@@ -32,6 +35,7 @@
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
     "rollup": "^2.79.2",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "ts-jest": "^29.3.0",
