--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "js": "node server.js",
     "build": "tsc",
     "lint": "eslint src/**/*.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "chroma": "node scripts/start-chroma.js"
   },
   "keywords": [],
   "author": "",
