--- a/jive-chatbot-widget/package.json
+++ b/jive-chatbot-widget/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "marked": "^15.0.7",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
