--- a/jive-chatbot-widget/package.json
+++ b/jive-chatbot-widget/package.json
@@ -14,7 +14,9 @@
     "test:watch": "jest --watch",
     "lint": "eslint 'src/**/*.ts'",
     "clean": "rimraf dist",
-    "prepublishOnly": "npm run clean && npm run build"
+    "prepublishOnly": "npm run clean && npm run build",
+    "dev": "npm run build && http-server -p 3000",
+    "debug": "npm run build && http-server -p 3000 --cors"
   },
   "keywords": [],
   "author": "",
@@ -35,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
     "eslint": "^9.23.0",
+    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
     "rollup": "^2.79.2",
