--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon --config nodemon.json",
     "js": "node server.js",
     "build": "tsc",
     "lint": "eslint src/**/*.ts",
